Wed Jan 16 18:14:43 2002  George Lebl <jirka@5z.com>

	* panel-util.[ch], applet.c , launcher.c, menu.c: Reenable the
	  DocPath help showing stuff, but slightly differently now

	* panel-util.[ch], panel-widget.c: s/my_g_/panel_g_/

	* panel-util.c, menu.c: a bit more work on error dialogs,
	  also have the error/info dialogs use the markup.

2002-01-16 Stephen Browne <stephen.browne@sun.com>

	* distribution.c

	changed the file to look for on Solaris

2002-01-16  Glynn Foster <glynn.foster@sun.com>

	* TODO: Update

2002-01-16  Padraig O'Briain  <padraig.obriain@sun.com>

	* basep_widget.[ch]
	Add "focus_return" signal to return focus from a child widget to the
	panel. Define key binding (Ctrl+Tab) to activate focus_return.
	Remove calls to g_return_if_fail (foo != NULL) if followed by calls
	to g_return_if_fail (GTK_IS_BAR (foo));

Wed Jan 16 01:01:38 2002  George Lebl <jirka@5z.com>

	* applet.[ch], panel-applet-frame.c: Make sure the AppletInfo is
	  freed, fix a possible race with applet destruction.  There are
	  some somewhat evil things still around here.  Fear.

	* panel-util.[ch], applet.c, gnome-run.c, menu-fentry.c, menu.c, 
	  panel.c: make deep_free list functions and use them

Tue Jan 15 15:05:46 2002  George Lebl <jirka@5z.com>

	* button-widget.[ch], panel-types.h, drawer.c, menu.c, launcher.c,
	  logout.c:  Remove the button widget type enum, it's not needed
	  without tiles

	* button-widget.c: draw the focus frame thingie over the icon
	  if we are focused.  You can now tab between launchers and
	  see where you are :)

	* panel-util.c: some warning fixes

2002-01-15  Padraig O'Briain  <padraig.obriain@sun.com>

	* menu-util.c (panel_menu_position):
	Ensure that menu position is close to panel even if popped up by
	keystroke.

	* panel.c:
	Add panel_do_popup_menu() and panel_popup_menu() to support popping
	up of menu using Shift+F10

2002-01-14  Padraig O'Briain  <padraig.obriain@sun.com>

	reviewed by: Mark McLoughlin <mark@skynet.ie>
